first pass at patching up Lecture 1.5

--- a/quillen.tex
+++ b/quillen.tex
@@ -332,7 +332,8 @@ In the case of a formal curve $C$, there is a short exact sequence of formal gro
 
 
 
-\section{Projectivization and Thom spaces}\citeme{Section 8 of the $H_\infty$ AHS paper.}
+\section{Projectivization and Thom spaces}\label{ProjectivizationLecture}
+\citeme{Section 8 of the $H_\infty$ AHS paper.}
 \todo{This title needs improvement.}
 \todo{You are not consistent about calling vector bundles $V$ or $\xi$.}
 
