--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 
 \todo[inline]{Should sections have subsections?  Does that help organize the TOC?}
 
-\todo[inline]{Hood wrote a macro called sumfgl (see also sumF and sumG) that will make a bunch of formal group law expressions typeset better. Propagate that change through.}
+\todo[inline]{Hood wrote a macro called sumfgl (see also sumF and sumG) that will make a bunch of formal group law expressions typeset better. Propagate that change through.  Consider also the adjunct macro in the preamble.  (Jay says that left-adjoints should be on top in general.)}
 
 \todo[inline]{http://tex.stackexchange.com/questions/53513/hyperref-token-not-allowed has information on how to make the PDF Bookmarks warnings go away. You can't use this until after you drop the date prefix macro.}
 
@@ -39,6 +39,7 @@
 \todo[inline]{Eliminate contractions.}
 
 \todo[inline]{Make sure that ``Case Study'' and ``Lecture'' are OK names by Springer's standards. If they aren't, do a careful search-and-replace for them.}
+
 
 
 
