almost finishes dusting up Lecture 1.5
still an open problem at the very end, and a couple of missing
references.

--- a/main.bib
+++ b/main.bib
@@ -640,6 +640,23 @@ MRREVIEWER = {I. M. James},
   URL = {http://www-math.mit.edu/~hrm/papers/bcat.pdf}
 }
 
+@inproceedings {Mitchell,
+    AUTHOR = {Mitchell, Stephen A.},
+     TITLE = {Power series methods in unoriented cobordism},
+ BOOKTITLE = {Proceedings of the {N}orthwestern {H}omotopy {T}heory
+              {C}onference ({E}vanston, {I}ll., 1982)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {19},
+     PAGES = {247--254},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {1983},
+   MRCLASS = {57R75 (55N22 57R77)},
+  MRNUMBER = {711056},
+MRREVIEWER = {Edgar H. Brown, Jr.},
+       DOI = {10.1090/conm/019/711056},
+       URL = {http://dx.doi.org/10.1090/conm/019/711056},
+}
+
 @article {MoravaFormsOfKthy,
     AUTHOR = {Morava, Jack},
      TITLE = {Forms of {$K$}-theory},
@@ -969,6 +986,13 @@ MRREVIEWER = {John Hunton},
        URL = {http://dx.doi.org/10.1016/S0040-9383(97)00054-2},
 }
 
+@misc{StricklandFGNotes,
+  author       = {Strickland, Neil P.},
+  title        = {Formal Groups},
+  howpublished = {\url{https://neil-strickland.staff.shef.ac.uk/courses/formalgroups/fg.pdf}},
+  year         = {2006},
+}
+
 @incollection {StricklandFSFG,
     AUTHOR = {Strickland, Neil P.},
      TITLE = {Formal schemes and formal groups},
@@ -1008,6 +1032,20 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {W. Stephen Wilson},
        DOI = {10.1090/S0002-9947-99-02436-8},
        URL = {http://dx.doi.org/10.1090/S0002-9947-99-02436-8},
+}
+
+@book {Switzer,
+    AUTHOR = {Switzer, Robert M.},
+     TITLE = {Algebraic topology---homotopy and homology},
+    SERIES = {Classics in Mathematics},
+      NOTE = {Reprint of the 1975 original [Springer, New York;  MR0385836
+              (52 \#6695)]},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2002},
+     PAGES = {xiv+526},
+      ISBN = {3-540-42750-3},
+   MRCLASS = {55-02},
+  MRNUMBER = {1886843},
 }
 
 @incollection {Vistoli,
