--- a/mo.tex
+++ b/mo.tex
@@ -477,7 +477,8 @@ In effect, this asserts that the above process is \emph{exhaustive}: every eleme
 
 We could now work through the construction of the Adams spectral sequence, but it will fit more nicely into a story later on in \Cref{StableContextLecture}.  Before moving on to other pursuits, however, we will record the following utility Lemma.  It is believable based on the above discussion, and we will need to use it before we get around to examining the guts of the construction.
 \begin{lemma}\label{HurewiczImageOnZeroLine}
-The $0$--line of the Adams spectral sequence contains those elements visible to the Hurewicz homomorphism. \qed
+\oweproof{Hurewicz image = $0$--line}
+The $0$--line of the Adams spectral sequence consists of exactly those elements visible to the Hurewicz homomorphism. \qed
 \end{lemma}
 
 For the rest of the section, we will focus on the algebraic input ``$\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X)$'', which will require us to grapple with the homological algebra of comodules for a Hopf algebra.  To start that discussion, it's both reassuring and instructive to see that homological algebra can, in fact, even be done with comodules.  In the usual development of homological algebra for \emph{modules}, the key observations are the existence of projective and injective modules, and there is something at work similar here.
@@ -619,7 +620,7 @@ This subgroup scheme $\Spec \pi_* H\F_2 \sm_{kO} H\F_2 \subseteq \InternalAut_1 
 \end{example}
 
 \begin{example}
-At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\Spec k$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.
+At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\Spec \F_2$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.
 \end{example}
 
 \todo{Jon asked: spectral sequences coming from $\pi_*$ of a Tot tower increase Tot degree. ANSS differentials decrease degree: they run against the multiplicative structure in pictures. What's going on with this?  I think this is a duality effect: working with the Steenrod algebra versus its dual.}
@@ -649,27 +650,42 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, whe
 
 \section{The unoriented bordism ring}
 
-Our goal in this section is to use the previous results of the Case Study to make a calculation of $\pi_* MO$, the unoriented bordism ring.  This is an extension of the examples at the end of the previous section: we will want to use the Adams spectral sequence of signature \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{H\F_2P_0(MO)}) \Rightarrow \pi_* MO,\] which necessitates first understanding $H\F_2P_0(MO)$ as a comodule structure for the dual Steenrod algebra.
+Our goal in this section is to use our results so far to make a calculation of $\pi_* MO$, the unoriented bordism ring.  Our approach is the same as in the examples at the end of the previous section: we will want to use the Adams spectral sequence of signature \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)\widetilde{\:}) \Rightarrow \pi_* MO,\] which requires understanding $H\F_2P_0(MO)$ as a comodule for the dual Steenrod algebra.
 
 Our first step toward this is the following calculation:
 \begin{lemma}[{\cite[Theorem 16.17]{Switzer}}]
 \todo{You could describe how the coaction map is induced on the symmetric algebra: I think it's applied simultaneously to each factor in the tensor element, then all the Steenrod algebra runoff is collected together by a multiplication.}
-The natural map \[\Sym \widetilde{H\F_2P}_0(BO(1)) \to H\F_2P_0(BO).\] induces an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra \[\Sym H\F_2P_0(BO(1)) \xrightarrow{\simeq} H\F_2P_0(BO).\]
+The natural map \[\Sym \widetilde{H\F_2P}_0(BO(1)) \to H\F_2P_0(BO).\] induces an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra \[\Sym \widetilde{H\F_2P}_0(BO(1)) = \frac{\Sym H\F_2P_0(BO(1))}{\beta_0 = 0} \xrightarrow{\simeq} H\F_2P_0(BO).\]
 \end{lemma}
 \begin{proof}
-This follows from a combination of various standard facts about Stiefel--Whitney classes.  First, these classes generate the cohomology ring $H\F_2^* BO(n)$: \[H\F_2^* BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Second, the total Stiefel--Whitney class is exponential, in the sense that $w(V \oplus W) = w(V) \cdot w(W)$.  From this, it follows that the natural map \[H\F_2^* BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} H\F_2^* BO(1)^{\times n} \cong (H\F_2^* BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(H\F_{2*} BO(1))^{\otimes n} \to H\F_{2*} BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as $n \to \infty$, we recover the statement of the Lemma.
+\todo{You could cite these standard facts.}
+This follows from a combination of standard facts about Stiefel--Whitney classes.  First, these classes generate the cohomology ring $H\F_2^* BO(n)$: \[H\F_2^* BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Second, the total Stiefel--Whitney class is exponential, in the sense of \[w(V \oplus W) = w(V) \cdot w(W).\]  From this, it follows that the natural map \[H\F_2^* BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} H\F_2^* BO(1)^{\times n} \cong (H\F_2^* BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(H\F_{2*} BO(1))^{\otimes n} \to H\F_{2*} BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as $n \to \infty$, we recover the statement of the Lemma.
 \end{proof}
 
-With this in hand, we can uncover the ring structure on $H\F_2P_0(MO)$:
-\begin{corollary}\label{HF2MOisFree}
-\todo{There's some confusion in these propositions about whether we're taking the symmetric algebra on the reduced homology module or what.  This really matters: it has something to do with the difference between any old $H\F_2P^0(MO(1))$ class and one which factors the ring spectrum unit. --- In fact, here you might mean $\Susp MO(1)$, the actual Thom \emph{space} associated to $BO(1)$.}
-There is an analogous isomorphism \[\Sym H\F_2P_0(\Susp MO(1)) \xrightarrow{\simeq} H\F_2P_0(MO).\]  In particular, $H\F_2P_0(MO) \cong \F_2[b_1, b_2, \ldots]$.
+With this in hand, we now turn to the homotopy ring $H\F_2P_0 MO$.  There are two equivalences that we might consider employing.  We have the Thom isomorphism:
+\begin{center}
+\begin{tikzcd}[row sep=0.2em]
+H\F_2P_0(BO(1)) \arrow[equal]{r} & H\F_2P_0(MO(1)) \\
+\beta_j, j \ge 0 \arrow[|->]{r} & \beta'_j, j \ge 0,
+\end{tikzcd}
+\end{center}
+and we also have the equivalence induced by the topological map in \Cref{RPnThomExample}:
+\begin{center}
+\begin{tikzcd}[row sep=0.2em]
+\widetilde{H\F_2P}_0 (BO(1)) \arrow[equal]{r} & H\F_2P_0 (\Susp MO(1)) \\
+\beta_j, j \ge 1 \arrow[|->]{r} & \beta'_{j-1}, j \ge 1.
+\end{tikzcd}
+\end{center}
+We will use them both in turn.
+
+\begin{corollary}[{\cite[Section I.3]{AdamsBlueBook}, \cite[Proposition 6.2]{HopkinsCOCTALOS}}]\label{HF2MOisFree}
+There is an isomorphism \[H\F_2P_0(MO) \cong \frac{\Sym H\F_2P_0 MO(1)}{b'_0 = 1}.\]
 \end{corollary}
 \begin{proof}
-The block sum maps \[BO(n) \times BO(m) \to BO(n+m)\] Thomify to give compatible maps \[MO(n) \sm MO(m) \to MO(n+m).\]  Taking the limit in $n$ and $m$, this gives a ring structure on $MO$ compatible with that on $BO$.  The Corollary then follows from the functoriality of Thom isomorphisms.
+The block sum maps \[BO(n) \times BO(m) \to BO(n+m)\] Thomify to give compatible maps \[MO(n) \sm MO(m) \to MO(n+m).\]  Taking the colimit, this gives a ring structure on $MO$ compatible with that on $\Susp^\infty_+ BO$ and compatible with the Thom isomorphism.
 \end{proof}
 
-We now seek to understand the scheme $\Spec H\F_2P_0(MO)$, and in particular its action of $\InternalAut(\G_a)$.  Our launching-off point for this is a topological version of the ``freeness'' result in the previous Corollary:
+We now seek to understand the utility of the scheme $\Spec H\F_2P_0(MO)$, as well as its action of $\InternalAut(\G_a)$.  The first of these tasks comes from untangling some of the topological dualities we've been using thus far.
 \begin{lemma}\label{DetectingMORingMapsInHomotopy}
 The following square commutes:
 \begin{center}
@@ -693,19 +709,29 @@ There is a bijection between homotopy classes of ring maps $MO \to H\F_2P$ and h
 \end{center}
 \end{corollary}
 \begin{proof}
-Given a ring map $MO \to H\F_2P$, we can restrict it along the inclusion $MO(1) \to MO$ to produce a particular cohomology class \[f \in H\F_2P^0(MO(1)) = \CatOf{Modules}_{\F_2}(H\F_2P_0(MO(1)), \F_2).\]  No two distinct maps $MO \to H\F_2P$ restrict to the same map $MO(1) \to MO \to H\F_2P$ --- this is the content of \Cref{DetectingMORingMapsInHomotopy} and \Cref{HF2MOisFree}.  In the other direction, a cohomology class $H\F_2P^0 MO(1)$ factoring the unit can be reinterpreted as a module map $\widetilde{H\F_2P}_0(MO(1)) \to \F_2$ satisfying \todo{XXXXX}.  We can then employ \Cref{HF2MOisFree} to produce an algebra map $H\F_2P_0(MO) \to \F_2$, and \Cref{DetectingMORingMapsInHomotopy} then gives a ring spectrum map $MO \to H\F_2P$.
+We extend the square in the \Cref{DetectingMORingMapsInHomotopy} using the following diagram:
+\begin{center}
+\begin{tikzcd}
+\CatOf{Modules}_{\F_2}(H\F_2P_0(MO(1)), \F_2) & \CatOf{Modules}_{\F_2}(H\F_2P_0(MO), \F_2) \arrow{l} \\
+\left\{f\co H\F_2P_0(MO(1)) \to \F_2 \middle| f(\beta_0') = 1\right\} \arrow[hookrightarrow]{u} \arrow[equal]{r} & \arrow[hookrightarrow]{u} \CatOf{Algebras}_{\F_2/}(H\F_2P_0(MO), \F_2),
+\end{tikzcd}
+\end{center}
+where the equality at bottom follows from the universal property of $H\F_2P_0(MO)$ in $\F_2$--algebras expressed in \Cref{HF2MOisFree}.  Noting that $\beta'_0$ is induced by the topological map $\S^0 \to MO(1)$, the condition $f(\beta'_0) = 1$ is exactly the condition expressed in the statement of the Corollary.
 \end{proof}
 
 \begin{corollary}
-There is an $\InternalAut(\G_a)$--equivariant isomorphism of schemes \[\Spec H\F_2P_0(MO) \cong \Coord_1(\RP^\infty_{H\F_2P}),\] where the latter is the subscheme of functions $\RP^\infty_{H\F_2P} \to \A^1$ which restrict to the canonical identification of tangent spaces $\RP^1_{H\F_2P} = \A^{1,(1)}$ (i.e., the subscheme of functions which are \emph{isomorphisms} of formal schemes).
+\citeme{I wish I could find this in the literature}
+There is an $\InternalAut(\G_a)$--equivariant isomorphism of schemes \[\Spec H\F_2P_0(MO) \cong \Coord_1(\RP^\infty_{H\F_2P}),\] where the latter is the subscheme of functions $\RP^\infty_{H\F_2P} \to \A^1$ which are coordinates (i.e., which are \emph{isomorphisms} of formal schemes --- or, equivalently, which restrict to the canonical identification of tangent spaces $\RP^1_{H\F_2P} = \A^{1,(1)}$).
 \end{corollary}
 \begin{proof}
-The method of the previous proof is to exhibit a isomorphism between these two schemes: the elements of $H\F_2P_0 MO$ serve as functions $\Spec H\F_2P_0 MO \to \A^1$ selecting the Taylor coefficients of the coordinate.  Since the comodule map \[H\F_2P_0 MO(1) \to \Sym H\F_2P_0 MO(1) \cong H\F_2P_0 MO\] selects the algebra generators, and the action of the group scheme $\InternalAut \G_a$ on $\Spec H\F_2P^0 BO(1)$ is by precomposition, it follows that the action on $\Spec H\F_2P_0 MO$ can also be interpreted as acting by precomposition on the algebraic model $\Coord_1(\RP^\infty_{H\F_2P})$.
+The conclusion of the previous Corollary is that the $\F_2$--points of $\Spec H\F_2P_0(MO)$ biject with classes $H\F_2P^0 MO(1) \cong \widetilde{H\F_2P}^0 \RP^\infty$ satisfying the condition that they give an isomorphism $\RP^\infty_{H\F_2P}$.  Because $H\F_2P_0(MO)$ is a polynomial algebra, this holds in general: for $u\co \F_2 \to T$ an $\F_2$--algebra, the $T$--points of $\Spec H\F_2P_0(MO)$ will biject with coordinates on $u^* \RP^\infty_{H\F_2P}$.  The isomorphism of schemes follows, though we have not yet discussed equivarience.
+
+To compute the action of $\InternalAut \G_a$, we turn to the map in \Cref{RPnThomExample}: \[\Susp^\infty BO(1) \xrightarrow{c, \simeq} \Susp MO(1).\]  Writing $\beta(t) = \sum_{j=0}^\infty \beta_j t^j$ and $\xi(t) = \sum_{k=0}^\infty \xi_k t^{2^k}$, the dual Steenrod coaction on $H\F_2P_0 BO(1)$ is encoded by the formula \[\sum_{j=0}^\infty \psi(\beta_j) t^j = \psi(\beta(t)) = \beta(\xi(t)) = \sum_{j=0}^\infty \beta_j \left(\sum_{k=0}^\infty \xi_k t^{2^k} \right)^j.\]  Because $c_*(\beta_j) = \beta'_{j-1}$, this translates to the formula $\psi(\beta'(t)) = \beta'(\xi(t))$, where \[\beta'(t) = \sum_{j=0}^\infty \beta'_j t^{j+1}.\]  Passing from $H\F_2P_0(MO(1))$ to $H\F_2P_0(MO) \cong \Sym H\F_2P_0(MO(1)) / (\beta'_0 = 1)$, this is precisely the formula for precomposing a coordinate with a strict automorphism --- i.e., a point in $\Aut_1(\G_a)$ acts on a point in $\Coord(\RP^\infty_{H\F_2P})$ in the way claimed.
 \end{proof}
 
-We are now ready to analyze the group cohomology of $\InternalAut(\G_a)$ with coefficients in the comodule $H\F_2P_0(MO)$.
-\begin{theorem}\label{CalculationOfAutGaActionOnMO}
-The action of $\InternalAut_1(\G_a)$ on $\Coord_1(\G_a)$ is \emph{free}: \[\Coord_1(\G_a) \cong \Spec \F_2[b_j \mid j \ne 2^k - 1] \times \InternalAut_1(\G_a).\]
+We are now ready to analyze the group cohomology of $\InternalAut(\G_a)$ with coefficients in the comodule $H\F_2P_0(MO)$.  This is the last piece of input we need to assess the Adams spectral sequence computing $\pi_* MO$.
+\begin{theorem}[{\cite[Theorem 12.2]{StricklandFGNotes}, \cite[Proposition 2.1]{Mitchell}}]\label{CalculationOfAutGaActionOnMO}
+The action of $\InternalAut_1(\G_a)$ on $\Coord_1(\G_a)$ is free: \[\Coord_1(\G_a) \cong \Spec \F_2[b_j \mid j \ne 2^k - 1] \times \InternalAut_1(\G_a).\]
 \end{theorem}
 \begin{proof}
 Recall, again, that $\InternalAut_1(\G_a)$ is defined by the (split) kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  Consider a point $f \in \Coord_1(\G_a)(R)$, which in terms of the standard coordinate can be expressed as \[f(x) = \sum_{j=1}^\infty b_{j-1} x^j,\] where $b_0 = 1$.  Decompose this series as $f(x) = f_2(x) + f_{\mathrm{rest}}(x)$, with
@@ -716,7 +742,7 @@ f_{\mathrm{rest}}(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 Because we assumed $b_0 = 1$ and $f_2$ is concentrated in power--of--$2$ degrees, it follows that $f_2$ gives a point $f_2 \in \InternalAut_1(\G_a)(R)$.  We can use it to de-scale and get a new coordinate $g(x) = f_2^{-1}(f(x))$, which has an analogous decomposition into series $g_2(x)$ and $g_{\mathrm{rest}}(x)$.  Finally, note that $g_2(x) = x$ and that $f_2$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.
 \end{proof}
 
-\begin{corollary}
+\begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]
 $\pi_* MO = \F_2[b_j \mid j \ne 2^k - 1, j \ge 1]$ with $|b_j| = j$.
 \end{corollary}
 \begin{proof}
@@ -730,18 +756,21 @@ Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  It follows from \Cref{CotensorReducesCo
 Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  Using the residual $\Gm$--action to infer the grading, we deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
 \end{proof}
 
-This is pretty remarkable: some big statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  The connection between these two problems seems fairly miraculous: we needed a small object, $\RP^\infty$, which controlled the whole story, we needed to be able to compute everything about it, and we needed various other ``generation'' or ``freeness'' results to work out in our favor.  It is not obvious that we will get this lucky twice, when we try to reapply these ideas to other cases --- and trying to push our luck as far as possible is the main thrust of the rest of the book.  We could close this section here, but there's are two easy consequences of this calculation that are worth recording before we leave.
+This is pretty remarkable: some statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  The connection between these two problems seems fairly miraculous: we needed a small object, $\RP^\infty$, which controlled the whole story; we needed to be able to compute everything about it; and we needed various other ``generation'' or ``freeness'' results to work out in our favor.  It is not obvious that we will get this lucky twice, should we try to reapply these ideas to other cases.  Nevertheless, trying to push our luck as far as possible is the main thrust of the rest of the book.  We could close this section with this accomplishment, but there are two easy consequences of this calculation that are worth recording before we leave.
 
 \begin{lemma}
 $MO$ splits as a wedge of shifts of $H\F_2$.
 \end{lemma}
 \begin{proof}
-Referring to \Cref{HurewiczImageOnZeroLine}, we have a $\pi_*$--injection $MO \to H\F_2 \sm MO$.  Pick an $\F_2$--basis $\{v_\alpha\}_\alpha$ for $\pi_* MO$ and extend it to a $\F_2$--basis $\{v_\alpha\}_\alpha \cup \{w_\beta\}_\beta$ for $\pi_* H\F_2 \sm MO$.  Altogether, this larger basis can be represented as a single map \[\bigvee_\alpha \Susp^{|v_\alpha|} \S \vee \bigvee_\beta \Susp^{|w_\beta|} \S \xrightarrow{\bigvee_\alpha v_\alpha \vee \bigvee_\beta w_\beta} H\F_2 \sm MO.\]  Smashing through with $H\F_2$ gives an equivalence \[\bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \xrightarrow\simeq H\F_2 \sm MO.\]  The composite map \[MO \to H\F_2 \sm MO \xleftarrow\simeq \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \to \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2\] is a weak equivalence.
+Referring to \Cref{HurewiczImageOnZeroLine}, we find that the Hurewicz map induces a $\pi_*$--injection $MO \to H\F_2 \sm MO$.  Pick an $\F_2$--basis $\{v_\alpha\}_\alpha$ for $\pi_* MO$ and extend it to a $\F_2$--basis $\{v_\alpha\}_\alpha \cup \{w_\beta\}_\beta$ for $\pi_* H\F_2 \sm MO$.  Altogether, this larger basis can be represented as a single map \[\bigvee_\alpha \Susp^{|v_\alpha|} \S \vee \bigvee_\beta \Susp^{|w_\beta|} \S \xrightarrow{\bigvee_\alpha v_\alpha \vee \bigvee_\beta w_\beta} H\F_2 \sm MO.\]  Smashing through with $H\F_2$ gives an equivalence \[\bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \xrightarrow\simeq H\F_2 \sm MO.\]  The composite map \[MO \to H\F_2 \sm MO \xleftarrow\simeq \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \to \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2\] is a weak equivalence.
 \end{proof}
 
 \begin{remark}
 Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a ring spectrum map $MO \to H\F_2$.  What we've learned is that this map has a splitting: $MO$ is also an $H\F_2$--algebra.
 \end{remark}
+
+\todo{remove me.}
+\newpage
 
 \begin{remark}
 \todo[inline]{You should mention the stable cooperations $\Spec MO_* MO$.  Rather than coming with a specified logarithm, it's an isomorphism between any pair of additive formal groups --- or, I suppose, a pair of logarithms.}
