Nitpick about \sheaf O

--- a/finite.tex
+++ b/finite.tex
@@ -604,7 +604,7 @@ The unique closed substack of $\moduli{fg}{}_{,(p)}:= \moduli{fg} \times \Spec \
 The complementary open substack of dimension $d$ is harder to describe.  From first principles, we can say only that it is the locus where the coordinate functions $p$, $v_1$, \ldots, $v_d$ do not \emph{all simultaneously vanish}.  It turns out that:
 \begin{enumerate}
 \item On a cover, at least one of these coordinates can be taken to be invertible.\todo{This actually uses the Zariski topology on the affine site, and hence may really use stackiness instead of levelwise schemeiness.  This is a problem, since you just told your students that stackiness won't come up...}
-\item Once one of them is invertible, a coordinate change on the formal group law can be used to make $v_d$ (and perhaps others in the list) invertible.  Hence, we can use $v_d^{-1} \sheaf O_{\moduli{fg}^{\ptyp}}$ as a coordinate chart.\todo{Hood wanted to know: What, exactly, is required here?}
+\item Once one of them is invertible, a coordinate change on the formal group law can be used to make $v_d$ (and perhaps others in the list) invertible.  Hence, we can use $v_d^{-1} \sheaf O_{\moduli{fg}^{\ptyp}}$\todo{What is the (global sections of the) sheaf of rings on a simplicial scheme (stack)? If you take sheaves of rings, and then global sections, levelwise, you end up with a simplicial ring, not a ring. -EB} as a coordinate chart.\todo{Hood wanted to know: What, exactly, is required here?}
 \item Over a further base extension and a further coordinate change, the higher coefficients $v_{d+k}$ can be taken to be zero.  Hence, we can also use $v_d^{-1} \Z_{(p)}[v_1, \ldots, v_d]$ as a coordinate chart.
 \end{enumerate}
 \end{remark}
