--- a/quillen.tex
+++ b/quillen.tex
@@ -889,7 +889,7 @@ In particular, for the orientation $MU \to H\Z$ we have \[x_1 +_{MU} x_2 = \exp^
 However, one also notes that $H\Z_* MU = \Z[b_1, b_2, \ldots]$ carries the universal example of a formal group law with a logarithm --- this observation is independent of any knowledge about $MU_*$.  It turns out that this brings us one step away from understanding $MU_*$:
 
 \begin{theorem}[{To be proven as \Cref{LazardsTheorem}}]\label{DummyLazardsThm}
-There is a ring $\sheaf O_{\moduli{fgl}}$ carrying the universal formal group law, and it is free: it is a polynomial ring over $\Z$ in countably many generators. \qed
+There is a ring $\sheaf O_{\moduli{fgl}}$\todo{It looks like this ring $\sheaf O$ is the global sections of the sheaf $\sheaf O$, which seems reasonable given that it's affine. Is this standard? I was confused about this on a later appearance of this symbol. -EB} carrying the universal formal group law, and it is free: it is a polynomial ring over $\Z$ in countably many generators. \qed
 \end{theorem}
 
 \begin{corollary}\label{QuillensTheorem}
