--- a/finite.tex
+++ b/finite.tex
@@ -300,7 +300,7 @@ The context for $MUP$ is considerably more complicated, but Quillen's theorem ca
 \end{example}
 
 \begin{remark}\citeme{Mike's Talbot talk, which is in the TMF volume.}
-If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{MU}(E)$ has an extra degeneracy, cause the $MU$--based Adams spectral sequence for $E$ to degenerate.  In this sense, the ``stackiness'' of $\context{MU}(E)$ is a measure of the failure of $E$ to be orientable.
+If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{MU}(E)$ has an extra degeneracy, which causes the $MU$--based Adams spectral sequence for $E$ to degenerate.  In this sense, the ``stackiness'' of $\context{MU}(E)$ is a measure of the failure of $E$ to be orientable.
 \end{remark}
 
 \todo{Say what open, closed, flat maps of simplicial schemes are?}
