some references for H^*_LT

--- a/main.bib
+++ b/main.bib
@@ -216,6 +216,21 @@ MRREVIEWER = {Frederick Cohen},
        URL = {http://dx.doi.org/10.2307/1971440},
 }
 
+@preamble{
+   "\def\cprime{$'$} "
+}
+@article {Drinfeld,
+    AUTHOR = {Drinfel{\cprime}d, V. G.},
+     TITLE = {Elliptic modules},
+   JOURNAL = {Mat. Sb. (N.S.)},
+    VOLUME = {94(136)},
+      YEAR = {1974},
+     PAGES = {594--627, 656},
+   MRCLASS = {10D99 (14K15)},
+  MRNUMBER = {0384707},
+MRREVIEWER = {Pierre Deligne},
+}
+
 @book {EKMM,
     AUTHOR = {Elmendorf, A. D. and Kriz, I. and Mandell, M. A. and May, J.
               P.},
