--- a/koass.tex
+++ b/koass.tex
@@ -1,30 +1,16 @@
-
 \begin{sseqdata}[
     execute at begin node=$,execute at end node=$,
     degree={-1}{#1},
     classes={circle,fill,inner sep=0.3ex},
-    differentials=->,
-%    struct lines=blue,
-    class labels={above left=0.2em},
-    edge labels={description,black},
+    differentials={-{>[width=4]}, target anchor=-35},
+    class labels=left,
+    label distance={0.2em},
+    above left label distance={0em},
     y range={0}{10},
     x range={0}{17},
     xscale=1.25,
     name=koass
 ]
-
-\sseqnewgroup\tower[1]{
-    \class(0,0)
-    \foreach \y in {2,...,#1} {
-        \class(0, \y-1)
-        \structline(0, \y-2, -1)(0, \y-1, -1)
-    }
-}
-
-\sseqnewcmd\etaclass{
-    \class(\x,\y)
-    \structline(\x-1,\y-1,-1)(\x,\y,-1)
-}
 
 \tower(0,0){12}
 \class["\eta"](1,1) \structline["\cdot \eta"](0,0)(1,1)
