--- a/mo.tex
+++ b/mo.tex
@@ -632,7 +632,7 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, whe
 \caption{The $H\F_2$--Adams spectral sequence for $kO$, which collapses at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$.}
 \end{figure}
 \begin{figure}[b]
-\input{sseqpages/ass.tex}
+\input{ass.tex}
 
 \caption{A small piece of the $H\F_2$--Adams spectral sequence for the sphere, beginning at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$, north-west lines denote $d_2$-- and $d_3$--differentials.}\label{HF2ASSFigure}
 \end{figure}
