correction about descent definition

--- a/finite.tex
+++ b/finite.tex
@@ -145,6 +145,13 @@ N \otimes_R S \otimes_R S \arrow["\phi_{13}", "\simeq"']{rr} \arrow["\phi_{12}",
 \end{center}
 where $\phi_{ij}$ denotes applying $\phi$ to the $i${\th} and $j${\th} coordinates.\citeme{Allen said he knew a good reference for this descent picture}
 
+\todo[inline]{I think the isomorphism here is supposed to be an isomorphism
+$N\otimes_RS\to N\otimes_RS$ that takes the obvious $S\otimes_RS$-module
+structure to the swapped-factor $S\otimes_RS$-module structure. So for example,
+if $N = S$, the only (obvious?) descent isomorphism $S\otimes_RS\to S\otimes_RS$
+would be the swap map. This is spelled out nicely in 4.5.1 of Mona Merling's
+thesis. -EB}
+
 \begin{definition}
 Let $f\co R \to S$ be a map of rings as above.  An $S$--module $N$ equipped with an isomorphism $S \otimes_R N \cong N \otimes_R S$ of $S \otimes_R S$--modules which causes the above triangle to commute is called a \textit{descent datum} for the map $f$.
 \end{definition}
