add an introduction to Case Study 2

--- a/mo.tex
+++ b/mo.tex
@@ -65,7 +65,7 @@ For $\xi$ an $S^{n-1}$--bundle, we define the \textit{Thom spectrum} of $\xi$ to
 $T$ is monoidal: it carries external fiberwise joins to smash products of Thom spectra.  Correspondingly, $T \circ J_{\R}$ carries external direct sums of stable vector bundles to smash products of Thom spectra. \qed
 \end{lemma}
 
-\begin{definition}
+\begin{definition}\label{DefnOfMO}
 The spectrum $MO$ arises as the universal example of all these constructions, strung together:
 \[MO := T(J_{\R}) = \colim_n T(J_{\R}^n) = \colim_n \Susp^{-n} T_n J_{\R}^n.\]
 \end{definition}
@@ -98,6 +98,10 @@ The equivalence is one of $MO$--modules because the $MO$--module structure of bo
 \end{proof}
 
 \noindent From here, the general version of Thom's theorem follows quickly:
+
+\begin{definition}
+A map $\phi\co MO \to E$ of homotopy ring spectra is called an \textit{orientation} of $E$ (by $MO$).\footnote{Later, we will refer to analogous ring spectrum maps $MU \to E$ off of the complex bordism spectrum as \textit{complex-orientations} of $E$.  However, calling ring maps $MO \to E$ ``unoriented-orientations'' is rightfully considered distasteful.}
+\end{definition}
 
 \begin{theorem}[Thom isomorphism]\label{GeneralThomIsom}
 Let $\xi\co X \to BO$ classify a vector bundle and let $\phi\co MO \to E$ be a map of ring spectra. Then there is an equivalence of $E$--modules \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X.\]
@@ -155,7 +159,7 @@ This powers an induction that shows $H\F_2{}_* \RP^\infty$ has a single class in
 
 
 
-\section{Cohomology rings and affine schemes}
+\section{Cohomology rings and affine schemes}\label{SectionSchemesOverF2}
 
 An abbreviated summary of this book is that we are going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before doing any algebraic topology, let me remind you what this means on the level of algebra.  The core idea is to replace a ring $R$ by the functor it corepresents, $\Spec R$.  For any ``test $\F_2$--algebra'' $T$, we set \[(\Spec R)(T) := \CatOf{Algebras}_{\F_2/}(R, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R).\]  More generally, we have the following definition:
 \begin{definition}
