fix the pdf bookmark warnings

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -325,6 +325,10 @@ Next time, we will investigate $F_* \OS{E}{*}$ in the more modest and concrete s
 
 
 
+
+
+
+
 \section{Complex-orientable cooperations}\label{COableCoopnsII}
 \todo{Jeremy found a paper (Chan's \textit{A simple proof that the unstable (co-)homology of the Brown--Peterson spectrum is torsion-free}, see also Wilson's Primer's Section 10) where $H_* \OS{BP}{2*}$ is proven to be bipolynomial (and even!) without any Hopf ring rigamarole. It looks like the method of proof is not very different from the Hopf ring one, but it's much shorter... and maybe the result will fall out of the Dieudonne module calculations anyhow?  Consider it as an option after you break this lecture in two.}
 \todo{Ravenel and Wilson also tell you how to get a basis of $\ast$--indecomposables, which they call ``allowable'' monomials.  Might be worth mentioning.}
@@ -787,7 +791,7 @@ To see this, note that because $E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}$ i
 
 
 
-\section{Cooperations and geometric points on $\moduli{fg}$}
+\section{Cooperations and geometric points on \texorpdfstring{$\moduli{fg}$}{Mfg}}
 
 Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, if you like, you can take to be $K(d)$) and $A$ for a finitely generated abelian group, and $H$ for the associated Eilenberg--Mac Lane spectrum.  Our goal is to study the unstable mixed cooperations $K_* \OS{H}{*}$, which we expect to be connected to formal group homomorphisms $\Gamma \to \G_a$ but which isn't covered by any of the cases studied thus far.  This calculation is interesting to us for two reasons:
 \begin{enumerate}
