--- a/finite.tex
+++ b/finite.tex
@@ -417,7 +417,7 @@ We will prove Claim 1 tomorrow.
 
 
 
-\section{The structure of $\moduli{fg}$ I: Distance from $\G_a$}\label{MfgI:Height}
+\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} I: Distance from \texorpdfstring{$\G_a$}{Ga}}\label{MfgI:Height}
 
 We begin by finishing up our proof of Lazard's theorem (and, specifically, the Symmetric $2$--cocycle Lemma).
 
@@ -555,7 +555,7 @@ Replace the formal group law by its $p$--typification.  Based on \Cref{RecoverLo
 
 
 
-\section{The structure of $\moduli{fg}$ II: Large scales}
+\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} II: Large scales}
 
 With the notion of ``height'' firmly in hand, we are now in a position to classify the geometric points of $\moduli{fg}$.
 
@@ -646,7 +646,7 @@ It's worth pointing out how strange all of this is. In Euclidean geometry, open 
 
 
 
-\section{The structure of $\moduli{fg}$ III: Small scales}
+\section{The structure of \texorpdfstring{$\moduli{fg}$}{Mfg} III: Small scales}
 
 \todo{This is the most confusing section in this chapter, says Danny.}
 
