--- a/hinfty.tex
+++ b/hinfty.tex
@@ -65,7 +65,7 @@ All of this rests, most importantly, on how a quotient of the Lubin--Tate univer
 
 
 
-\section{$E_\infty$ ring spectra and their contexts}
+\section{\texorpdfstring{$E_\infty$}{Eoo} ring spectra and their contexts}
 
 \todo[inline]{Mike has suggested looking at the paper \textit{The $K$--theory localization of an unstable sphere}, by Mahowald and Thompson.  In it, they manually construct a resolution of $S^{2n+1}$ suitable for computing the unstable Adams spectral sequence for $K$--theory, but the resolution that they build is also exactly what you would use to compute the mapping spectral sequence for $E_\infty(K^{S^{2n-1}}, K)$.  Additionally, because the unstable $K$--theoretic operations are exhausted by the power operations, these two spectral sequences converge to the same target.
 
@@ -483,7 +483,7 @@ where the product is now over all transitive Abelian $p$-subgroups. This implies
 
 
 
-\section{Interaction with $\Theta$--structures}
+\section{Interaction with \texorpdfstring{$\Theta$}{Theta}--structures}
 
 The Ando--Hopkins--Strickland result that the $\sigma$--orientation is an $H_\infty$--map
 
