--- a/sigma.tex
+++ b/sigma.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\chapter{The $\sigma$-orientation}\label{ChapterSigmaOrientation}
+\chapter{The \texorpdfstring{$\sigma$}{sigma}-orientation}\label{ChapterSigmaOrientation}
 
 
 \todo[inline]{Write an introduction for me.  Use unstable cooperations from Morava's theories to classical complex and real $K$--theory.}
@@ -280,7 +280,7 @@ In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an ac
 
 
 
-\section{Elliptic curves and $\theta$--functions}\label{SectionEllipticCurvesAndThetaFunctions}
+\section{Elliptic curves and \texorpdfstring{$\theta$}{theta}--functions}\label{SectionEllipticCurvesAndThetaFunctions}
 
 \todo{The goal of this lecture should be to set up all the algebraic geometry we'll need, in a coherent-enough way that the students will be able to think back and at least mumble ``yeah, ok, reasonable''.}
 
@@ -388,7 +388,7 @@ The proof of projectivity arising from this method rests on choosing an ample li
 
 
 
-\section{Unstable chromatic cooperations for $kU$}\label{ChromaticKUCoopnsSection}
+\section{Unstable chromatic cooperations for \texorpdfstring{$kU$}{kU}}\label{ChromaticKUCoopnsSection}
 
 Let $\Gamma$ be a formal group of finite $p$--height of a field $k$ of positive characteristic $p$, and let $E = E_\Gamma$ denote the associated Morava $E$--theory.  Our goal in this section is to get a partial description of the Hopf ring of unstable cooperations $(E_\Gamma)_* \OS{kU}{2*}$.  Our results in previous sections give a foothold into this analysis by computing \[E_0 (BU \times \Z),\; E_0 BU,\; E_0 BSU\] in terms of the affine schemes they represent.  We also saw that these results were the cornerstone for accessing descriptions of the schemes \[\Spec E_0 MUP,\; \Spec E_0 MU,\; \Spec E_0 MSU.\]  In particular, the next step is to understand $E_0 BU[6, \infty)$, and our main tool for doing this will be the Postnikov fibration \[\OS{H\Z}{3} \to BU[6, \infty) \to BSU.\]  Our main goals are to construct a model sequence of formal schemes, then show that $E$--theory is well-behaved enough that the formal schemes it constructs exactly match the model.
 
@@ -708,7 +708,7 @@ This is a direct consequence of the $5$--lemma.
 
 
 
-\section{Unstable additive cooperations for $kU$}
+\section{Unstable additive cooperations for \texorpdfstring{$kU$}{kU}}
 
 Write $H = H\F_p$.  Today we will study the effect of the map $\hat \Pi_3$ in ordinary homology.  Many parts of the proof we explored for $E$--theory break.  Topologically, the Serre spectral sequence for $H^* BU[6, \infty)$ is not even-concentrated and so is not forced to collapse.  Algebraically, because $\G_a$ is not $p$--divisible the behavior of the model exact sequence is also suspect.  Because the situation has fewer insulating good properties, we are forced to actually consider it carefully.  The upside, however, is that the standard group law on $\G_a$ is simple enough that we can compute the problem to death.
 
@@ -823,7 +823,7 @@ Our analysis in \Cref{LEFTCooperations} gives us full access to the Hopf ring st
 
 
 
-\section{Covariance, $\Theta$--structures on Thom sheaves}
+\section{Covariance, \texorpdfstring{$\Theta$}{Theta}--structures on Thom sheaves}
 
 Today we will (despite appearances) mostly leave the algebraic geometry alone, instead attending to two lingering topological concerns.  First, over the past few lectures we have been concerned with the homology schemes $\Spec E_0 \OS{kU}{2*}$.  We were originally motivated by a sequence of cohomological isomorphisms
 \begin{align*}
@@ -941,7 +941,7 @@ is isomorphic to the affine scheme $\Spec E_0 MU[6, \infty)$.  Moreover, the $E_
 
 
 
-\section{Modular forms from $MU[6, \infty)$--manifolds}
+\section{Modular forms from \texorpdfstring{$MU[6, \infty)$}{MU[6, oo)}--manifolds}
 
 Our goal today is to actually leverage the arithmetic geometry in \Cref{Theta3IsTrivial}, rather than just using the body of results about $\theta$--functions as inspiration.  In order to do this, we need to place ourselves in a situation where algebraic topology is directly linked to abelian varieties.
 
@@ -1076,7 +1076,7 @@ This is exactly Witten's formula for his genus, as applied to complex manifolds 
 
 
 
-\section{Chromatic $\Spin$ and $\String$ orientations}
+\section{Chromatic \texorpdfstring{$\Spin$}{Spin} and \texorpdfstring{$\String$}{String} orientations}
 
 \begin{center}
 \textbf{\Large This is under construction.  The stuff here is correct, but it didn't turn into a super coherent lecture, and I have an idea for something better to say.}
