--- a/unknowns.tex
+++ b/unknowns.tex
@@ -6,7 +6,7 @@
 
 \todo[inline]{I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.}
 
-\section{$E_\infty$ geometry}
+\section{\texorpdfstring{$E_\infty$}{Eoo} geometry}
 
 \Cref{OrdinaryHomologyInUpperHalfPlaneEx} is an inspiration for considering $\tmf$ as well.
 
