--- a/mo.tex
+++ b/mo.tex
@@ -633,7 +633,7 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, whe
 \begin{figure}[b]
 \input{koass.tex}
 
-\caption{The $H\F_2$--Adams spectral sequence for $kO$, which collapses at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$.}
+\caption{The $H\F_2$--Adams spectral sequence for $kO$, which collapses at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$.}\label{kOASSFigure}
 \end{figure}
 \begin{figure}[b]
 \input{ass.tex}
