fix warning about \Huge being used in mathmode

--- a/preamble.tex
+++ b/preamble.tex
@@ -135,8 +135,7 @@
 \renewcommand{\th}{\textsuperscript{th}}
 \newcommand{\st}{\textsuperscript{st}}
 
-\newcommand{\bigast}{\mathop{\vcenter{\hbox{$\Huge \mathlarger{\mathlarger{\ast}}$}}}}
-% \newcommand{\bigcirc}{\mathop{\Huge \mathlarger{\mathlarger{\circ}}}}
+\newcommand{\bigast}{\mathop{\vcenter{\hbox{$\mathlarger{\mathlarger{\ast}}$}}}}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
@@ -148,6 +147,7 @@
 \newcommand{\InternalAut}{\operatorname{\underline{\smash{\operatorname{Aut}}}}}
 \newcommand{\InternalEnd}{\operatorname{\underline{\smash{\operatorname{End}}}}}
 \newcommand{\sheaf}[1]{\mathcal{#1}}
+\newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
 
 \newcommand{\Spin}{\mathit{Spin}}
 \newcommand{\String}{\mathit{String}}
@@ -164,7 +164,6 @@
 \newcommand{\gpd}{\mathrm{gpd}}
 \newcommand{\ptyp}{p\text{-}\mathrm{typ}}
 \newcommand{\id}{\mathrm{id}}
-\newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
 \newcommand{\FGps}{\mathrm{FGps}}
 \newcommand{\fin}{\mathrm{fin}}
 
