add metadata to the pdf

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,9 +1,12 @@
 % -*- root: main.tex -*-
 
+\usepackage[pdftex,
+            pdfauthor={Eric Peterson},
+            pdftitle={Formal Geometry and Bordism Operations}]{hyperref}
+
 \usepackage{fullpage}
 % \usepackage{savetrees}
 \usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
-\usepackage{hyperref}
 \usepackage[version warn]{sseqpages/sseqpages}
 %\usepackage{stmaryrd}
 %\usepackage{MnSymbol}
