some more editing to-dos

--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,11 @@
 
 \todo[inline]{Eliminate contractions.}
 
+\todo[inline]{Eliminate filler words like ``things''.}
+
 \todo[inline]{Make sure that ``Case Study'' and ``Lecture'' are OK names by Springer's standards. If they aren't, do a careful search-and-replace for them.}
+
+\todo[inline]{Double check that you're careful about choosing consistent names for your objects: $S = \Spec R$ is the base scheme, that sort of thing.}
 
 
 
@@ -119,6 +123,18 @@ Then, $G \cong \A^n$ as a functor to sets, where $n = \dim M$.
 \begin{proof}
 This is 9.6.4 in the Crystals notes.
 \end{proof}
+
+
+
+\begin{lemma}[{\cite[Proposition 4.6]{StricklandFSFG}}]
+A functor $X\co \CatOf{Algebras} \to \CatOf{Sets}$ is a formal scheme exactly when
+\begin{enumerate}
+\item $X$ preserves finite limits.
+\item There exists a family of maps $X_i \to X$ from a set of $S$--schemes $X_i$ such that the induced map \[\coprod_i X_i(T) \to X(T)\] is jointly surjective for all test algebras $T$. \qed
+\end{enumerate}
+\end{lemma}
+
+
 
 
 
