serious attempt at cleaning up Lecture 2.1
… which had previously been a right mess

--- a/main.bib
+++ b/main.bib
@@ -113,6 +113,12 @@ MRREVIEWER = {Amnon Neeman},
        URL = {http://dx.doi.org/10.2140/agt.2010.10.1521},
 }
 
+@book {BeilinsonDrinfeld,
+    AUTHOR = {Beilinson, A. A. and Drinfeld, V.},
+     TITLE = {Quantization of {H}itchin's integrable system and {H}ecke eigensheaves},
+      NOTE = {Preprint available online at {http://www.math.uchicago.edu/{\textasciitilde}mitya/langlands/hitchin/BD-hitchin.pdf}},
+}
+
 @article {BCM,
     AUTHOR = {Bendersky, M. and Curtis, E. B. and Miller, H. R.},
      TITLE = {The unstable {A}dams spectral sequence for generalized
@@ -304,6 +310,18 @@ MRREVIEWER = {Neil P. Strickland},
 MRREVIEWER = {Harold Hastings},
        DOI = {10.1016/0021-8693(80)90194-5},
        URL = {http://dx.doi.org/10.1016/0021-8693(80)90194-5},
+}
+
+@book {Hazewinkel,
+    AUTHOR = {Hazewinkel, Michiel},
+     TITLE = {Formal groups and applications},
+      NOTE = {Corrected reprint of the 1978 original},
+ PUBLISHER = {AMS Chelsea Publishing, Providence, RI},
+      YEAR = {2012},
+     PAGES = {xxvi+573},
+      ISBN = {978-0-8218-5349-8},
+   MRCLASS = {14L05 (11F85 13F35)},
+  MRNUMBER = {2987372},
 }
 
 @article {HedayatzadehFieldCase,
