--- a/unknowns.tex
+++ b/unknowns.tex
@@ -100,7 +100,7 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 
 \subsection*{Higher orientations}
 
-$\TAF$ and friends
+$\TAF$ and friends\label{TAFDiscussion}
 
 The $\alpha_{1/1}$ argument: Prop 2.3.2 of Hovey's $v_n$--elements of ring spectra
 
