small terminology change

--- a/intro.tex
+++ b/intro.tex
@@ -15,7 +15,7 @@ To begin, we will define a homology theory called ``bordism homology''.  Recall 
 \end{align*}
 
 \begin{lemma}\citeme{Find a reference for this fact. I learned it on MathOverflow.}
-This forms a chain complex of monoids under direct sum of manifolds, and its homology is written $MO_*(X)$.  These are naturally abelian groups, and moreover they satisfy the axioms of a generalized homology theory. \qed
+This forms a chain complex of monoids under disjoint union of manifolds, and its homology is written $MO_*(X)$.  These are naturally abelian groups, and moreover they satisfy the axioms of a generalized homology theory. \qed
 \end{lemma}
 
 In fact, we can define a bordism theory $MG$ for any suitable family of structure groups $G(n) \to O(n)$.  The coefficient ring of $MG$, or its value $MG_*(*)$ on a point, gives the ring of $G$--bordism classes, and generally $MG_*(Y)$ gives a kind of ``bordism in families over the space $Y$''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:\todo{dshi:I don't follow here. How does this replacement go explicitly? Somehow I understood it when you explained this to me in person but now I don't see it anymore.} \[MO \to H\Z/2, \quad MSO \to H\Z.\] In both cases, we can evaluate on a point to get ring maps, called ``genera'': \[MO_*(*) \to \Z/2 \quad \text{and} \quad MSO_*(*) \to \Z,\] neither of which is very interesting, since they're both zero in positive degrees.
