fix a missing \co

--- a/quillen.tex
+++ b/quillen.tex
@@ -68,7 +68,7 @@ We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} 
 \end{proof}
 
 \begin{definition}
-The $A$--module appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. \xrightarrow{da = 0} A\{1\} \to 0.\]  The kernel $\Omega_{A/R}$ is called the module of \textit{K\"ahler differentials} (of $A$, relative to $R$).  The map $d:R\to \Omega^1_{A/R}$ is the universal $R$--linear derivation into an $A$--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
+The $A$--module appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. \xrightarrow{da = 0} A\{1\} \to 0.\]  The kernel $\Omega_{A/R}$ is called the module of \textit{K\"ahler differentials} (of $A$, relative to $R$).  The map $d\co R\to \Omega^1_{A/R}$ is the universal $R$--linear derivation into an $A$--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
 \end{definition}
 
 The upshot of this calculation is that $\Spec A/I^2$ is a natural place to study the linear behavior of functions on $X$ near $x$.  We have also set the definitions up so that we can easily generalize to higher-order approximations:
