reference for the chain model for bordism

--- a/main.bib
+++ b/main.bib
@@ -549,6 +549,20 @@ MRREVIEWER = {Bj{\"o}rn Schuster},
        URL = {http://dx.doi.org/10.1016/j.aim.2003.10.008},
 }
 
+@article {Kochman,
+    AUTHOR = {Kochman, Stanley O.},
+     TITLE = {A chain functor for bordism},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {239},
+      YEAR = {1978},
+     PAGES = {167--196},
+      ISSN = {0002-9947},
+   MRCLASS = {55B20 (55H25)},
+  MRNUMBER = {0488031},
+MRREVIEWER = {Joel M. Cohen},
+}
+
 @article {Lazard,
     AUTHOR = {Lazard, Michel},
      TITLE = {Sur les groupes de {L}ie formels \`a un param\`etre},
